# jura-connect

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: PROTOCOL.md
jura_connect/: __init__.py  __main__.py  client.py  commands.py  credentials.py  discovery.py  profile.py  protocol.py  simulator.py
jura_connect/data/: JOE_MACHINES.TXT
jura_connect/data/xml/EF1012/: 1.6.xml
jura_connect/data/xml/EF1013/: 1.5.xml
jura_connect/data/xml/EF1030/: 1.4.xml
jura_connect/data/xml/EF1031/: 1.4.xml
jura_connect/data/xml/EF1060/: 1.7.xml
jura_connect/data/xml/EF1065/: 2.0.xml
jura_connect/data/xml/EF1069/: 1.6.xml
jura_connect/data/xml/EF1070/: 1.8.xml
jura_connect/data/xml/EF1089/: 2.0.xml
jura_connect/data/xml/EF1090/: 2.1.xml
jura_connect/data/xml/EF1091/: 1.6.xml
jura_connect/data/xml/EF1092/: 1.6.xml
jura_connect/data/xml/EF1096/: 1.7.xml
jura_connect/data/xml/EF1096V2/: 1.1.xml
jura_connect/data/xml/EF1097/: 1.4.xml
jura_connect/data/xml/EF1100/: 2.5.xml
jura_connect/data/xml/EF1100V2/: 1.5.xml
jura_connect/data/xml/EF1105/: 2.2.xml
jura_connect/data/xml/EF1105V2/: 1.5.xml
jura_connect/data/xml/EF1106/: 4.5.xml
jura_wifi/: README.md  __init__.py  __main__.py  client.py  commands.py  credentials.py  crypto.py  discovery.py  protocol.py  simulator.py
tests/: conftest.py  test_cli.py  test_commands.py  test_credentials.py  test_crypto.py  test_discovery.py  test_handshake.py  test_profile.py  test_reads.py  test_write_setting.py
(+66 files in other folders)
