[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "jura_connect"
version = "0.3.0"
description = "Python WiFi interface for Jura coffee machines (TT237W / S8)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "jura-connect contributors" }]
dependencies = []

[project.scripts]
jura-connect = "jura_connect.__main__:main"

[tool.setuptools.packages.find]
include = ["jura_connect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
